# djangoblog

./: .env  db.sqlite3  pyproject.toml
djangoblog/: settings.py  urls.py  views.py
djangoblog/article/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
djangoblog/article/migrations/: 0001_initial.py  0002_delete_article.py  0003_initial.py
djangoblog/templates/: about.html  index.html
djangoblog/templates/articles/: art.html  create.html  index.html
